# wild-travelers

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: data_loader.py  nlp.py
src/tabs/: tab_dataviz.py  tab_home.py  tab_ml.py
